fix: enterprise card now blue (#97acec) with white contrast, art images spread wider

--- a/src/assets/styles/components/footer.css
+++ b/src/assets/styles/components/footer.css
@@ -29,11 +29,11 @@
 }
 
 .signup-shell__art--left {
-  left: 12%;
+  left: 2%;
 }
 
 .signup-shell__art--right {
-  right: 12%;
+  right: 2%;
 }
 
 .signup-card {
